--- a/src/assets/sass/pages/_portfolio-detail.scss
+++ b/src/assets/sass/pages/_portfolio-detail.scss
@@ -22,7 +22,7 @@
   &_button-close-overlay {
     position: absolute;
     top: 3%;
-    right: 3%;
+    left: 3%;
     background: none;
     border: none;
     font-size: 3rem;
