--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -10,6 +10,7 @@
     --cor-gray: #71827b ;
     --cor-warm-gray: #b7bfbc;
     --cor-navbar-light: #EBE6E0;
+    --cor-cursor-mix: color-burn;
 }
 
 // Configuración fuentes generales
