--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -5,7 +5,8 @@ body.light-theme {
     --cor-light: #EBE6E0;
     --cor-gray: #71827b;
     --cor-warm-gray: #b7bfbc;
-    --cor-navbar-light: #EBE6E0;
+    --cor-cursor-mix: color-burn;
+
 }
 
 body.dark-theme {
@@ -15,7 +16,8 @@ body.dark-theme {
     --cor-light: #131313;
     --cor-gray: #71827b;
     --cor-warm-gray: #b7bfbc;
-    --cor-navbar-light: #EBE6E0;
+    --cor-cursor-mix: difference;
+
 }
 
 // FONTS
