--- a/src/assets/sass/pages/footer/_footer.scss
+++ b/src/assets/sass/pages/footer/_footer.scss
@@ -1,4 +1,6 @@
 .footer__section {
+    position: relative;
+    z-index:100000;
     height: 100vh;
     display: flex;
     flex-direction: column;
