deleted react scroll dependency and started mobile version, thumbnail back to normal and bug fixes

--- a/src/assets/sass/pages/nav/_navbar.scss
+++ b/src/assets/sass/pages/nav/_navbar.scss
@@ -15,7 +15,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        z-index: 1030; // Matching Bootstrap's z-index for fixed elements
+        z-index: 10300000; // Matching Bootstrap's z-index for fixed elements
     }
 }
 
