--- a/src/assets/sass/base/_general.scss
+++ b/src/assets/sass/base/_general.scss
@@ -11,6 +11,11 @@
   box-sizing: border-box;
 }
 
+div {
+  line-height: 1; /* O igual al tamaño de la fuente */
+}
+
+
 #root{
   min-width: 100vw;
   min-height: 100vh;
@@ -153,6 +158,13 @@
   }
 }
 
+.white-space--nowrap{
+  white-space: nowrap;
+}
+
+.inset--0{
+  inset: 0;
+}
 /*THEME BUTTON*/
 .theme {
 
@@ -162,7 +174,7 @@
     left: 0;
     padding-left: 20px;
     padding-bottom: 12px;
-    z-index: 1030;
+    z-index: 10300000;
   }
 
   &__animation {
