--- a/src/assets/sass/pages/_portfolio-detail.scss
+++ b/src/assets/sass/pages/_portfolio-detail.scss
@@ -6,7 +6,7 @@
     position: fixed !important;
     top: 0;
     right: 0;
-    z-index: 1032;
+    z-index: 10320000;
     width: 100vw;
   }
 
@@ -64,11 +64,11 @@
 
     &--selected {
       opacity: 1 !important;
-      border: 2px solid #fff;
     }
 
     &:hover {
-      border: 2px solid #fff;
+      filter: brightness(1) !important;
+      opacity: 1 !important;
     }
   }
 
@@ -78,7 +78,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1031;
+    z-index: 10310000;
     height: 100vh;
     width: 100vw;
     background-color: var(--cor-light);
