--- a/src/assets/sass/pages/_portfolio-page.scss
+++ b/src/assets/sass/pages/_portfolio-page.scss
@@ -65,7 +65,7 @@
             }
 
             &-loader {
-                    opacity: 0;
+                opacity: 0;
             }
         }
     }
@@ -184,3 +184,37 @@
     transform: translateX(-50%) translateY(-50%) translateZ(-800px);
     opacity: 1;
 }
+
+.card-column {
+    display: flex;
+    flex-direction: column;
+    gap: 20px; /* Espaciado entre tarjetas */
+    // align-items: center; /* Centra las tarjetas horizontalmente */
+    padding: 20px;
+  }
+  
+  .card {
+    display: flex;
+    flex-direction: column;
+    // align-items: center;
+    width: 100%;
+    // text-align: center;
+
+  }
+  
+  .card__image-wrapper {
+    width: 100%;
+    height: 500px; /* Altura fija para las imágenes */
+    overflow: hidden; /* Oculta cualquier parte que sobresalga */
+//    border-radius: 8px;
+  }
+  
+  .card__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Asegura que la imagen se ajuste correctamente */
+    display: block; /* Elimina cualquier espacio blanco adicional */
+  }
+  
+
+  
