--- a/src/assets/sass/pages/_portfolio-page.scss
+++ b/src/assets/sass/pages/_portfolio-page.scss
@@ -1,9 +1,23 @@
 .portfolio__hero {
+
+    &-mobile-title {
+        transform: rotate(-90deg);
+        position: absolute;
+        left: 0;
+        top: 100%;
+        transform-origin: top left;
+        padding-left: 50px;
+    }
+
     &-title {
         margin: 0px;
         margin-top: 10px;
         font-size: 15vw !important;
         line-height: 21vw;
+
+        @include media-breakpoint-down(md) {
+            font-size: 24vw !important;
+        }
     }
 
     &-images {
@@ -22,6 +36,10 @@
                 height: 60vh;
                 width: 50vh;
                 z-index: 1;
+                @include media-breakpoint-down(md) {
+                    height: 40vh;
+                    width: 30vh;
+                }
             }
 
             &:nth-of-type(2) {
@@ -30,6 +48,9 @@
                 height: 35vh;
                 width: 30vh;
                 z-index: 2;
+                @include media-breakpoint-down(md) {
+                    display: none;
+                }
             }
 
             &:nth-of-type(3) {
@@ -38,6 +59,12 @@
                 height: 35vh;
                 width: 30vh;
                 z-index: 3;
+                @include media-breakpoint-down(md) {
+                    left: 58vw;
+                    top: 75vh;
+                    height: 24vh;
+                    width: 16vh;
+                }
             }
 
             &:nth-of-type(4) {
@@ -46,6 +73,12 @@
                 height: 55vh;
                 width: 40vh;
                 z-index: 1;
+                @include media-breakpoint-down(md) {
+                    top: 75vh;
+                    left: 33vw;
+                    height: 21vh;
+                    width: 70vw;
+                }
             }
 
             &:nth-of-type(5) {
@@ -54,6 +87,11 @@
                 height: 85vh;
                 width: 60vh;
                 z-index: 2;
+                @include media-breakpoint-down(md) {
+                    height: 40vh;
+                    width: 30vh;
+                    display: none;
+                }
             }
 
             &:nth-of-type(6) {
@@ -62,6 +100,13 @@
                 height: 48vh;
                 width: 35vh;
                 z-index: 3;
+                @include media-breakpoint-down(md) {
+                    height: 30vh;
+                    width: 21vh;
+                    left: 7vw;
+                    top: 114vh;
+
+                }
             }
 
             &-loader {
@@ -188,33 +233,35 @@
 .card-column {
     display: flex;
     flex-direction: column;
-    gap: 20px; /* Espaciado entre tarjetas */
+    gap: 20px;
+    /* Espaciado entre tarjetas */
     // align-items: center; /* Centra las tarjetas horizontalmente */
     padding: 20px;
-  }
-  
-  .card {
+}
+
+.card {
     display: flex;
     flex-direction: column;
     // align-items: center;
     width: 100%;
     // text-align: center;
 
-  }
-  
-  .card__image-wrapper {
+}
+
+.card__image-wrapper {
     width: 100%;
-    height: 500px; /* Altura fija para las imágenes */
-    overflow: hidden; /* Oculta cualquier parte que sobresalga */
-//    border-radius: 8px;
-  }
-  
-  .card__image {
+    height: 500px;
+    /* Altura fija para las imágenes */
+    overflow: hidden;
+    /* Oculta cualquier parte que sobresalga */
+    //    border-radius: 8px;
+}
+
+.card__image {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Asegura que la imagen se ajuste correctamente */
-    display: block; /* Elimina cualquier espacio blanco adicional */
-  }
-  
-
-  
+    object-fit: cover;
+    /* Asegura que la imagen se ajuste correctamente */
+    display: block;
+    /* Elimina cualquier espacio blanco adicional */
+}
