--- a/src/assets/sass/pages/nav/_navbar.scss
+++ b/src/assets/sass/pages/nav/_navbar.scss
@@ -103,9 +103,7 @@
     transition: all 0.3s ease-in-out; // Transición suave
 
     &--inverted {
-        @include media-breakpoint-up(xxl) {
             mix-blend-mode: difference; // Aplicar mezcla para invertir colores
-        }
     }
 
     &--fixed-top {
@@ -127,12 +125,6 @@
     color: var(--cor-navbar-light);
     transition: transform 1.2s ease-in-out, opacity 1.2s ease-in-out;
 
-    &__container {
-        position: relative;
-        text-transform: uppercase;
-        font-family: 'gunterz', sans-serif; // Asegúrate de que el nombre de la fuente esté correctamente especificado
-    }
-
     &__logo--centered {
         position: absolute;
         top: 50%;
@@ -141,62 +133,45 @@
         z-index: 1051;
     }
 
-    &--expand-lg {
-        @media (min-width: 992px) {
-            flex-wrap: nowrap !important;
-            justify-content: flex-start !important;
+    &__container {
+        @include media-breakpoint-up(xl) {
+            justify-content: space-between;
         }
-    }
-
-    &__container-fluid {
         display: flex;
         flex-wrap: inherit;
         align-items: center;
-        justify-content: space-between;
         width: 100%;
+        justify-content: flex-end;
         padding-right: 3rem;
         padding-left: 3rem;
         margin-right: auto;
         margin-left: auto;
+        position: relative;
+        text-transform: uppercase;
+        font-family: "gunterz", sans-serif;
     }
 
-    &__links {
-        @include media-breakpoint-up(xxl) {
-            flex-direction: row;
+    &__links--list {
+        @include media-breakpoint-down(xl) {
+            flex-direction: column;
         }
 
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         padding-left: 0;
         margin-bottom: 0;
         list-style: none;
-
-        &--left {
-            margin-right: auto;
-        }
-
-        &--right {
-            margin-left: auto;
-        }
-
-        ul {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            padding: 0;
-            margin: 0;
-        }
+        align-items: center;
     }
 
-    &__item-link {
-        @include media-breakpoint-up(xxl) {
+    &__links--item-link {
+        @include media-breakpoint-up(xl) {
             padding-right: 0.94rem;
             padding-left: 0.94rem;
             font-size: 1rem;
         }
-        
+
         display: block;
-        padding: 1rem 0;
         font-size: 2rem;
         text-decoration: none;
         transition: color 0.15s ease-in-out,
@@ -212,8 +187,6 @@
         cursor: pointer;
         flex-direction: column;
         justify-content: space-around;
-        height: 24px;
-        width: 30px;
         z-index: 1100;
 
         .burger-line {
@@ -223,13 +196,13 @@
             transition: all 0.3s ease-in-out;
         }
 
-        @include media-breakpoint-down(xxl) {
+        @include media-breakpoint-down(xl) {
             display: flex;
         }
     }
 
     // Dropdown menu
-    &__menu {
+    &__mbl {
         display: none;
         flex-direction: column;
         position: fixed;
@@ -251,21 +224,23 @@
             opacity: 0.8; // Define el nivel de opacidad
             z-index: -1; // Envía el fondo detrás del contenido
         }
-        
-        ul {
-            text-align: center;
-            list-style: none;
-            margin: 0;
-            padding: 0;
 
-            li {
+        &--links {
+            &-list {
+                text-align: center;
+                list-style: none;
+                margin: 0;
+                padding: 0;
+            }
+
+            &-item {
                 margin: 10px 0;
             }
         }
     }
 
     // Responsive styles
-    @include media-breakpoint-down(xxl) {
+    @include media-breakpoint-down(xl) {
         &__links {
             display: none;
 
@@ -275,7 +250,7 @@
             }
         }
 
-        &__menu--open {
+        &__mbl--open {
             display: flex;
             height: 100vh;
             width: 100vw;
@@ -283,4 +258,49 @@
             justify-content: center;
         }
     }
+}
+
+
+.ham {
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    transition: transform 400ms;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.line {
+    fill: none;
+    transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+    stroke: var(--cor-navbar-light);
+    stroke-width: 5.5;
+    stroke-linecap: round;
+}
+
+.ham3 .top {
+    stroke-dasharray: 40 130;
+}
+
+.ham3 .middle {
+    stroke-dasharray: 40 140;
+}
+
+.ham3 .bottom {
+    stroke-dasharray: 40 205;
+}
+
+.ham3.active .top {
+    stroke-dasharray: 75 130;
+    stroke-dashoffset: -63px;
+}
+
+.ham3.active .middle {
+    stroke-dashoffset: -102px;
+}
+
+.ham3.active .bottom {
+    stroke-dasharray: 110 205;
+    stroke-dashoffset: -86px;
 }
