--- a/src/assets/sass/pages/_contact-page.scss
+++ b/src/assets/sass/pages/_contact-page.scss
@@ -66,9 +66,11 @@
       content: "\e900";
       color: var(--cor-secondary);
     }
+
     &.icon-mail {
       background: transparent;
     }
+
     &.icon-mail:before {
       content: "\e904";
       color: #da6a2d;
@@ -81,11 +83,109 @@
     padding: 8.5rem 63px 4rem 63px;
     background-color: var(--cor-light);
     height: 100vh;
+
+    @include media-breakpoint-down(md) {
+      height: 100%;
+    }
   }
 
   &__form-flex--column {
     flex-basis: 33.33%;
     display: flex;
     flex-direction: column;
+  }
+
+  &__form-svg-animation {
+    height: 600px;
+    position: relative;
+    width: 100%;
+    border: 3px var(--cor-primary) solid;
+    border-radius: 80px;
+    @include media-breakpoint-down(md) {
+      display: none;
+    }
+  }
+
+  &__form-input-data {
+    height: 30px;
+    width: 100%;
+    position: relative;
+
+    input {
+      height: 100%;
+      width: 100%;
+      border: none;
+      font-family: 'gunterz';
+      padding: 0;
+      border-bottom: 2px solid var(--cor-primary);
+      background-color: transparent;
+      outline: none; // Quita el recuadro de focus
+
+      &:focus+label,
+      &:not(:placeholder-shown)+label {
+        bottom: 35px;
+        color: var(--cor-primary);
+      }
+    }
+
+    label {
+      position: absolute;
+      bottom: 5px;
+      left: 0;
+      pointer-events: none;
+      transition: bottom 0.3s ease, color 0.3s ease;
+      color: var(--cor-primary);
+      font-family: 'gamilia';
+      text-transform: uppercase;
+    }
+
+    @include media-breakpoint-down(md) {
+      margin-bottom: 2rem;
+    }
+
+    &-area {
+      position: relative;
+
+      label {
+        position: absolute;
+        bottom: 55px;
+        left: 0;
+        pointer-events: none;
+        transition: bottom 0.3s ease, color 0.3s ease;
+        color: var(--cor-primary);
+        font-family: 'gamilia';
+        text-transform: uppercase;
+      }
+
+      textarea#message {
+        border: none;
+        border-bottom: 2px solid var(--cor-primary) !important;
+        resize: none;
+        width: 100% !important;
+        height: 100px;
+        line-height: 1.5;
+        padding: 5px 0;
+        font-size: 16px;
+        background: transparent;
+        outline: none;
+        overflow: hidden;
+      }
+
+      textarea#message:focus {
+        border-bottom: 2px solid var(--cor-primary);
+      }
+
+      textarea#message::placeholder {
+        color: transparent;
+      }
+
+      textarea#message:focus+label,
+      textarea#message:not(:placeholder-shown)+label {
+        bottom: 110px;
+        /* Adjust based on textarea height */
+        color: var(--cor-primary);
+      }
+    }
+
   }
 }
