--- a/src/assets/sass/layout/_spacing-dimension.scss
+++ b/src/assets/sass/layout/_spacing-dimension.scss
@@ -54,23 +54,7 @@ Uso de clases de gap (`.g`):
             }
         }
     }
-//BORRABLES
-    // &--w-max {
-    //     width: max-content !important;
-    // }
 
-    // &--w-fit {
-    //     width: fit-content !important;
-    // }
-
-    // &--h-max {
-        //     height: max-content !important;
-        // }
-    
-        // &--h-fit {
-        //     height: fit-content !important;
-        // }
-        
     &--w-100 {
         width: 100% !important;
 
@@ -121,6 +105,14 @@ Uso de clases de gap (`.g`):
     @each $i, $value in (0: 0rem, 1: 0.25rem, 2: 0.5rem, 3: 1rem, 4: 1.5rem, 5: 3rem) {
         &--#{$i} {
             padding: $value;
+        }
+
+        @include media-breakpoint-down(md) {
+            @each $i, $value in (0: 0rem, 1: 0.25rem, 2: 0.5rem, 3: 1rem, 4: 1.5rem, 5: 3rem) {
+                &--#{$i}-mbl {
+                    padding: $value;
+                }
+            }
         }
     }
 
@@ -276,6 +268,12 @@ Uso de clases de gap (`.g`):
     @each $i, $value in (1: 0.25rem, 2: 0.5rem, 3: 1rem, 4: 1.5rem, 5: 3rem) {
         &--#{$i} {
             gap: $value; // Equivalente a "gap-1", "gap-2", etc. en Bootstrap
+        }
+
+        @include media-breakpoint-down(md) {
+            &--#{$i}-mbl {
+                gap: $value !important; // Equivalente a "gap-1", "gap-2", etc. en Bootstrap
+            }
         }
     }
 }
