--- a/src/assets/sass/layout/_spacing-dimension.scss
+++ b/src/assets/sass/layout/_spacing-dimension.scss
@@ -108,7 +108,7 @@ Uso de clases de gap (`.g`):
         }
 
         @include media-breakpoint-down(md) {
-            @each $i, $value in (0: 0rem, 1: 0.25rem, 2: 0.5rem, 3: 1rem, 4: 1.5rem, 5: 3rem) {
+            @each $i, $value in (0: 0rem, 1: 0.25rem, 2: 0.5rem, 3: 1rem, 4: 1.5rem, 5: 3rem, 6: 6.25rem) {
                 &--#{$i}-mbl {
                     padding: $value;
                 }
@@ -136,6 +136,14 @@ Uso de clases de gap (`.g`):
     @each $i, $value in (0: 0rem, 1: 0.25rem, 2: 0.5rem, 3: 1rem, 4: 1.5rem, 5: 3rem) {
         &--t-#{$i} {
             padding-top: $value;
+        }
+
+        @include media-breakpoint-down(md) {
+            @each $i, $value in (6: 6.25rem, 7:8.25rem) {
+                &--t-#{$i}-mbl {
+                    padding-top: $value;
+                }
+            }
         }
 
         &--r-#{$i} {
