--- a/src/assets/sass/layout/_spacing-dimension.scss
+++ b/src/assets/sass/layout/_spacing-dimension.scss
@@ -40,7 +40,7 @@ Uso de clases de gap (`.g`):
     // Viewport Heights -- ONLY ON DESKTOP
     @each $size, $value in (50: 50vh, 100: 100vh, 150: 150vh, 175: 175vh, 300: 300vh) {
         &--vh-#{$size} {
-            height: $value !important;
+            height: $value;
         }
     }
 
@@ -144,14 +144,6 @@ Uso de clases de gap (`.g`):
             padding-top: $value;
         }
 
-        @include media-breakpoint-down(md) {
-            @each $i, $value in (6: 6.25rem, 7:8.25rem) {
-                &--t-#{$i}-mbl {
-                    padding-top: $value;
-                }
-            }
-        }
-
         &--r-#{$i} {
             padding-right: $value;
         }
@@ -162,6 +154,14 @@ Uso de clases de gap (`.g`):
 
         &--l-#{$i} {
             padding-left: $value;
+        }
+    }
+
+    @include media-breakpoint-down(md) {
+        @each $i, $value in (6: 6.25rem, 7:8.25rem) {
+            &--t-#{$i}-mbl {
+                padding-top: $value;
+            }
         }
     }
 }
