--- a/src/assets/sass/pages/_contact-page.scss
+++ b/src/assets/sass/pages/_contact-page.scss
@@ -15,12 +15,15 @@
       font-size: 3.49rem;
     }
   }
+
   &__title-mbl span {
     transition: color 0.2s ease-in-out;
   }
-  
+
   &__logo-mbl {
-    margin-top: -100px;
+    @include media-breakpoint-down(md) {
+      margin-top: -100px;
+    }
   }
 
   // Modificador para el email
@@ -38,15 +41,10 @@
     padding: 20px 5vw;
     text-decoration: none;
 
-    // Ajustes para versión móvil
-    @media (max-width: $cor-grid-breakpoints-lg) {
+    @include media-breakpoint-down(md){
       flex-direction: column;
-      padding: 20px; // Ajuste de padding para móvil
-
-      &>.contact__link {
-        margin-bottom: 10px;
-
-      }
+      padding: 30px 0px 60px;
+      align-items: flex-start;
     }
   }
 
@@ -57,6 +55,12 @@
     justify-content: center;
     gap: 10px;
     text-decoration: none;
+
+    @include media-breakpoint-down(md){
+      align-items: baseline;
+      justify-content:flex-start;
+
+    }
   }
 
   &__logo-circle {
@@ -71,31 +75,49 @@
     background-repeat: no-repeat;
 
     &.icon-linkedin:before {
-      content: "\e903";
+      content: "\e904";
       color: var(--cor-secondary);
     }
 
     &.icon-github:before {
-      content: "\e901";
-      color: var(--cor-secondary);
-    }
-
-    &.icon-instagram:before {
       content: "\e902";
       color: var(--cor-secondary);
     }
 
-    &.icon-behance:before {
-      content: "\e900";
+    &.icon-instagram:before {
+      content: "\e903";
       color: var(--cor-secondary);
     }
+
+    &.icon-behance:before {
+      content: "\e901";
+      color: var(--cor-secondary);
+    }
+
+    &.icon-arrow {
+      width: auto; // Elimina el ancho fijo si no necesitas un círculo
+      height: auto; // Elimina la altura fija si no necesitas un círculo
+      border-radius: 0; // Elimina la forma circular
+      background-color: transparent; // Fondo transparente
+      display: flex; // Asegúrate de que los elementos internos estén alineados correctamente
+      justify-content: center;
+      align-items: center;
+
+      &:before {
+        content: "\e900"; // Icono de flecha
+        color: var(--cor-primary); // Define el color del icono
+        background-color: transparent; // Fondo del pseudo-elemento transparente
+        font-size: inherit; // Asegúrate de que la fuente sea consistente
+      }
+    }
+
 
     &.icon-mail {
       background: transparent;
     }
 
     &.icon-mail:before {
-      content: "\e904";
+      content: "\e905";
       color: #da6a2d;
     }
 
