--- a/src/assets/sass/pages/_editorials-page.scss
+++ b/src/assets/sass/pages/_editorials-page.scss
@@ -109,3 +109,21 @@
         }
     }
 }
+
+.pdf-flipbook {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+
+    .pdf-canvas {
+        margin: 1rem 0;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        transform-origin: center center;
+        transition: transform 0.3s;
+    }
+
+    .pdf-canvas:hover {
+        transform: scale(1.05);
+    }
+}
