--- a/src/assets/sass/layout/_container.scss
+++ b/src/assets/sass/layout/_container.scss
@@ -1,84 +1,76 @@
 .container-bem {
-    --gutter-x: 1.5rem;
-    --gutter-y: 0;
-    width: 100%;
-    padding-right: calc(var(--gutter-x) * 0.5);
-    padding-left: calc(var(--gutter-x) * 0.5);
-    margin-right: auto;
-    margin-left: auto;
-  
-    // Max-widths por breakpoint
-    @media (min-width: 576px) {
-      max-width: $cor-container-max-widths-sm; // 540px
-    }
-  
-    @media (min-width: 768px) {
-      max-width: $cor-container-max-widths-md; // 720px
-    }
-  
-    @media (min-width: 992px) {
-      max-width: $cor-container-max-widths-lg; // 1400px
-    }
-  
-    @media (min-width: 1200px) {
-      max-width: $cor-container-max-widths-xl; // 1440px
-    }
-  
-    @media (min-width: 1400px) {
-      max-width: $cor-container-max-widths-xxl; // 1480px
-    }
+  --gutter-x: 1.5rem;
+  --gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--gutter-x) * 0.5);
+  padding-left: calc(var(--gutter-x) * 0.5);
+  margin-right: auto;
+  margin-left: auto;
+
+  // Max-widths por breakpoint
+  @media (min-width: 576px) {
+    max-width: $cor-container-max-widths-sm; // 540px
   }
 
-  .container-bem-mbl {
+  @media (min-width: 768px) {
+    max-width: $cor-container-max-widths-md; // 720px
+  }
+
+  @media (min-width: 992px) {
+    max-width: $cor-container-max-widths-lg; // 1400px
+  }
+
+  @media (min-width: 1200px) {
+    max-width: $cor-container-max-widths-xl; // 1440px
+  }
+
+  @media (min-width: 1400px) {
+    max-width: $cor-container-max-widths-xxl; // 1480px
+  }
+}
+
+.container-bem-mbl {
+  @include media-breakpoint-down(md) {
     --gutter-x: 1.5rem;
     --gutter-y: 0;
-    width: 100%;
-    padding-right: calc(var(--gutter-x) * 0.5);
-    padding-left: calc(var(--gutter-x) * 0.5);
-    margin-right: auto;
-    margin-left: auto;
-  
-    // Max-widths por breakpoint
-    @media (max-width: 576px) {
-      max-width: $cor-container-max-widths-sm; // 540px
-    }
-  
-    @media (max-width: 768px) {
-      max-width: $cor-container-max-widths-md; // 720px
-    }
+    width: 100% !important;
+    padding-right: calc(var(--gutter-x) * 0.5) !important;
+    padding-left: calc(var(--gutter-x) * 0.5) !important;
+    margin-right: auto !important;
+    margin-left: auto !important;
   }
-  
+}
 
-  .container--fluid-bem {
-    width: 100%;
-    padding-right: var(--cor-gutter-width, 15px);
-    padding-left: var(--cor-gutter-width, 15px);
-    margin-right: auto;
-    margin-left: auto;
-  
-    @include media-breakpoint-up(sm) {
-      padding-right: $cor-container-max-widths-sm;
-      padding-left: $cor-container-max-widths-sm;
-    }
-  
-    @include media-breakpoint-up(md) {
-      padding-right: $cor-container-max-widths-md;
-      padding-left: $cor-container-max-widths-md;
-    }
-  
-    @include media-breakpoint-up(lg) {
-      padding-right: $cor-container-max-widths-lg;
-      padding-left: $cor-container-max-widths-lg;
-    }
-  
-    @include media-breakpoint-up(xl) {
-      padding-right: $cor-container-max-widths-xl;
-      padding-left: $cor-container-max-widths-xl;
-    }
-  
-    @include media-breakpoint-up(xxl) {
-      padding-right: $cor-container-max-widths-xxl;
-      padding-left: $cor-container-max-widths-xxl;
-    }
+
+.container--fluid-bem {
+  width: 100%;
+  padding-right: var(--cor-gutter-width, 15px);
+  padding-left: var(--cor-gutter-width, 15px);
+  margin-right: auto;
+  margin-left: auto;
+
+  @include media-breakpoint-up(sm) {
+    padding-right: $cor-container-max-widths-sm;
+    padding-left: $cor-container-max-widths-sm;
   }
-  
+
+  @include media-breakpoint-up(md) {
+    padding-right: $cor-container-max-widths-md;
+    padding-left: $cor-container-max-widths-md;
+  }
+
+  @include media-breakpoint-up(lg) {
+    padding-right: $cor-container-max-widths-lg;
+    padding-left: $cor-container-max-widths-lg;
+  }
+
+  @include media-breakpoint-up(xl) {
+    padding-right: $cor-container-max-widths-xl;
+    padding-left: $cor-container-max-widths-xl;
+  }
+
+  @include media-breakpoint-up(xxl) {
+    padding-right: $cor-container-max-widths-xxl;
+    padding-left: $cor-container-max-widths-xxl;
+  }
+}
