--- a/src/assets/sass/pages/nav/_navbar.scss
+++ b/src/assets/sass/pages/nav/_navbar.scss
@@ -128,7 +128,7 @@
             width: 100%;
             height: 100%;
             background-color: var(--cor-primary); // Cambia al color que desees
-            opacity: 0.8; // Define el nivel de opacidad
+            // opacity: 0.8; // Define el nivel de opacidad
             z-index: -1; // Envía el fondo detrás del contenido
         }
 
