--- a/src/assets/sass/pages/nav/_navbar.scss
+++ b/src/assets/sass/pages/nav/_navbar.scss
@@ -7,7 +7,7 @@
     transition: all 0.3s ease-in-out; // Transición suave
 
     &--inverted {
-            mix-blend-mode: difference; // Aplicar mezcla para invertir colores
+        mix-blend-mode: difference; // Aplicar mezcla para invertir colores
     }
 
     &--fixed-top {
@@ -35,7 +35,8 @@
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 1051;
-        @include media-breakpoint-down(xl){
+
+        @include media-breakpoint-down(xl) {
             display: none;
         }
     }
@@ -44,6 +45,7 @@
         @include media-breakpoint-up(xl) {
             justify-content: space-between;
         }
+
         display: flex;
         flex-wrap: inherit;
         align-items: center;
@@ -55,7 +57,8 @@
         margin-left: auto;
         position: relative;
         text-transform: uppercase;
-        font-family: "gunterz", sans-serif;
+        font-family: "gunterz",
+        sans-serif;
     }
 
     &__links--list {
@@ -134,7 +137,6 @@
 
         &--links {
             &-list {
-                text-align: center;
                 list-style: none;
                 margin: 0;
                 padding: 0;
@@ -143,6 +145,25 @@
             &-item {
                 margin: 10px 0;
             }
+        }
+
+        &--image-container {
+            width: 100%;
+            text-align: center;
+            padding: 1rem 0;
+        }
+
+        &--image {
+            max-width: 100%; // Ajusta el tamaño según sea necesario
+            height: auto;
+            object-fit: contain;
+        }
+
+        &--submenu {
+            line-height: 1.5rem;
+            font-family: 'Gamilia';
+            text-align: right;
+            list-style: none;
         }
     }
 
@@ -162,7 +183,17 @@
             height: 100vh;
             width: 100vw;
             // background-color: var(--cor-primary);
-            justify-content: center;
+            justify-content: flex-end;
         }
     }
+}
+
+.glow-text {
+    text-shadow: -0.05em 0 0.02em var(--cor-light),
+        0 0 0.3em var(--cor-light);
+
+    color: var(--cor-light);
+    /* Blanco para resaltar el efecto */
+
+    /* Opcional: Mejora la visibilidad del glow */
 }
