more content added wip and minor changes

--- a/src/components/AnimatedButton/AnimatedButton.scss
+++ b/src/components/AnimatedButton/AnimatedButton.scss
@@ -1,13 +1,14 @@
 // Variables de tamaño
-.animated-button {
+.animated__button {
   box-sizing: border-box;
   border: 1px solid black;
   overflow: hidden;
   position: relative;
   border-radius: 100px;
 
-  p {
+  &-text {
     font-family: "gunterz", sans-serif;
+    font-size: 12px;
     position: absolute;
     top: 50%;
     left: 50%;
