--- a/src/assets/sass/pages/_portfolio-detail.scss
+++ b/src/assets/sass/pages/_portfolio-detail.scss
@@ -1,4 +1,5 @@
 .pdetails_ {
+
   /*IMAGES DETAILED VIEW OVERLAY*/
   &_container-detail {
     height: 100vh;
@@ -132,12 +133,15 @@
     position: relative;
     width: 300px;
     height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &__item-image {
     object-fit: cover;
     width: 100%;
-    height: 100%;
+    height: 120%;
   }
 
   &.ordered {
