--- a/src/assets/sass/base/_fonts.scss
+++ b/src/assets/sass/base/_fonts.scss
@@ -4,6 +4,7 @@
   font-weight: 900;
   /* Black */
   font-style: normal;
+  font-display: swap !important; /* Ensures fallback font is shown while loading */
 }
 
 @font-face {
@@ -12,6 +13,7 @@
   font-weight: 700;
   /* Bold */
   font-style: normal;
+  font-display: swap !important; /* Ensures fallback font is shown while loading */
 }
 
 @font-face {
@@ -20,6 +22,7 @@
   font-weight: 500;
   /* Medium */
   font-style: normal;
+  font-display: swap !important; /* Ensures fallback font is shown while loading */
 }
 
 @font-face {
@@ -28,6 +31,7 @@
   font-weight: 400;
   /* Regular */
   font-style: normal;
+  font-display: swap !important; /* Ensures fallback font is shown while loading */
 }
 
 @font-face {
@@ -36,6 +40,7 @@
   font-weight: normal;
   /* 400 */
   font-style: normal;
+  font-display: swap !important; /* Ensures fallback font is shown while loading */
 }
 
 .heading--jumbo {
@@ -53,7 +58,7 @@
     url('./../fonts/social-font/icomoon.svg?eum11x#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 
 [class^="icon-"], [class*=" icon-"] {
