Editorials detail wip

--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -6,9 +6,13 @@
     --cor-primary: #341116;
     --cor-secondary: #DA6A2D;
     --cor-dark: #323232;
-    --cor-light: #EBE6E0 ;
-    --cor-gray: #71827b ;
+    --cor-light: #EBE6E0;
+    --cor-gray: #71827b;
     --cor-warm-gray: #b7bfbc;
+    --cor-primary-greece: #B8D0EC;
+    --cor-secondary-greece: #054421;
+    --cor-primary-tanzania: #B83A25;
+    --cor-secondary-tanzania: #F0EBC5;
     --cor-navbar-light: #EBE6E0;
     --cor-cursor-mix: color-burn;
 }
