--- a/src/assets/sass/pages/_editorials-detail.scss
+++ b/src/assets/sass/pages/_editorials-detail.scss
@@ -1,28 +1,27 @@
 .editorials-detail {
+  &__hero--title {
+    width: fit-content;
+    margin: auto;
+    margin-top: 1.25rem;
 
-    &__hero--title {
-        width: fit-content;
-        margin: auto;
-        margin-top: 1.25rem;
-
-        &-h1 {
-            font-size: 8vw;
-            white-space: nowrap;
-        }
-
-        &-h2 {
-            font-size: 1rem;
-            font-family: 'gunterz';
-            text-transform: uppercase;
-        }
+    &-h1 {
+      font-size: 8vw;
+      white-space: nowrap;
     }
 
-    &__hero--text {
-        width: 45vw;
-        margin: auto;
-        text-align: center;
-        font-family: "Darker Grotesque", sans-serif;
-        font-size: 1.3rem;
-        padding: 1rem;
+    &-h2 {
+      font-size: 1rem;
+      font-family: "gunterz";
+      text-transform: uppercase;
     }
+  }
+
+  &__hero--text {
+    width: 45vw;
+    margin: auto;
+    text-align: center;
+    font-family: "Darker Grotesque", sans-serif;
+    font-size: 1.3rem;
+    padding: 1rem;
+  }
 }
