--- a/src/assets/sass/pages/_editorials-page.scss
+++ b/src/assets/sass/pages/_editorials-page.scss
@@ -101,7 +101,7 @@
         height: 600px;
         display: flex;
         flex-shrink: 0;
-
+        flex-direction: column;
         &-image {
             width: 100%;
             height: 100%;
